// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordButton should render correctly 1`] = `
<button
  class="md-text-field-inline-indicator md-password-btn md-pointer--hover md-text--disabled"
  type="button"
>
  <i
    class="md-icon material-icons"
  >
    remove_red_eye
  </i>
</button>
`;

exports[`PasswordButton should render correctly 2`] = `
<button
  class="md-text-field-inline-indicator md-password-btn md-pointer--hover md-text--secondary md-password-btn--invisible"
  type="button"
>
  <i
    class="md-icon material-icons"
  >
    remove_red_eye
  </i>
</button>
`;

exports[`PasswordButton should render correctly 3`] = `
<button
  class="md-text-field-inline-indicator md-password-btn md-pointer--hover md-text--secondary"
  type="button"
>
  <i
    class="md-icon material-icons"
  >
    remove_red_eye
  </i>
</button>
`;

exports[`PasswordButton should render correctly 4`] = `
<button
  class="md-text-field-inline-indicator md-password-btn md-pointer--hover md-text--secondary md-password-btn--invisible md-text-field-inline-indicator--floating"
  type="button"
>
  <i
    class="md-icon material-icons"
  >
    remove_red_eye
  </i>
</button>
`;

exports[`PasswordButton should render correctly 5`] = `
<button
  class="md-text-field-inline-indicator md-password-btn md-pointer--hover md-text--secondary md-password-btn--invisible md-text-field-inline-indicator--block"
  type="button"
>
  <i
    class="md-icon material-icons"
  >
    remove_red_eye
  </i>
</button>
`;
